<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/game_name"
        android:textColor="@color/purple"
        android:textFontWeight="700"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_name"
        tools:text="Choose a weapon" />

    <ImageView
        android:id="@+id/iv_opponents_object"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/question_mark"
        android:scaleType="fitCenter"
        android:src="@drawable/im_question"
        app:layout_constraintEnd_toStartOf="@+id/btn_select_object"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <ImageView
        android:id="@+id/iv_users_object"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:contentDescription="@string/users_object"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/iv_opponents_object"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_opponents_object"
        app:layout_constraintTop_toTopOf="@+id/iv_opponents_object"
        tools:src="@drawable/im_rock" />

    <Button
        android:id="@+id/btn_select_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_btn_select_object"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_select_object"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/iv_opponents_object"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_opponents_object"
        app:layout_constraintTop_toTopOf="@+id/iv_opponents_object" />

    <Button
        android:id="@+id/btn_fight"
        android:layout_width="207dp"
        android:layout_height="81dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/shape_btn_fight_start"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/fight"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:visibility="invisible"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>